<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joe.maintenancejournal.view.PerformMaintenanceActivityFragment"
    tools:showIn="@layout/activity_perform_maintenance">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_perform_maintenance"
        android:text="@string/title_perform_maintenance"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_name"
        android:layout_below="@+id/title_perform_maintenance">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/label_dummy_task_name"
            android:id="@+id/label_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_cost"
        android:layout_below="@+id/layout_name"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_actual_cost"
            android:id="@+id/label_cost"/>

        <EditText
            style="@style/DefaultEditText"
            android:id="@+id/text_entry_cost"
            android:hint="@string/hint_cost_value"
            android:inputType="number"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pick_date"
        android:layout_below="@+id/layout_cost"
        android:id="@+id/text_date"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/text_date"
        android:id="@+id/picker_entry_date"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        android:calendarViewShown="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picker_entry_date"
        android:id="@+id/entry_notes"
        android:hint="@string/hint_add_notes"/>

    <Button
        style="@style/DefaultButton"
        android:layout_below="@+id/entry_notes"
        android:layout_alignParentEnd="true"
        android:text="@string/button_save_entry"
        android:id="@+id/button_save_entry"/>

</RelativeLayout>