<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joe.maintenancejournal.CreateTaskActivityFragment"
    tools:showIn="@layout/activity_create_task">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_add_task"
        android:text="@string/title_create_task"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_name"
        android:layout_below="@+id/title_add_task">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_task_name"
            android:id="@+id/label_name"/>

        <EditText
            style="@style/DefaultEditText"
            android:layout_toEndOf="@+id/label_name"
            android:layout_toRightOf="@+id/label_name"
            android:id="@+id/text_task_name"
            android:hint="@string/hint_task_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_cost"
        android:layout_below="@+id/layout_name"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cost"
            android:id="@+id/label_cost"/>

        <EditText
            style="@style/DefaultEditText"
            android:id="@+id/text_task_cost"
            android:hint="@string/hint_task_cost"
            android:inputType="number"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pick_date"
        android:layout_below="@+id/layout_cost"
        android:id="@+id/text_date"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/text_date"
        android:id="@+id/picker_task_date"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        android:calendarViewShown="false"/>

    <android.support.v7.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_recurring"
        android:id="@+id/checkbox_recurring"
        android:layout_below="@id/picker_task_date"
        android:layout_alignParentRight="true"
        android:checkMark="@drawable/checkmark_selector"
        android:textSize="24dp" />

    <Button
        style="@style/DefaultButton"
        android:layout_below="@+id/checkbox_recurring"
        android:layout_alignParentRight="true"
        android:text="@string/button_save_task"
        android:id="@+id/button_save_task"/>

</RelativeLayout>
