<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateItemActivityFragment"
    tools:showIn="@layout/activity_create_item">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_add_item"
        android:text="@string/title_add_item"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_name"
        android:layout_below="@+id/title_add_item">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_item_name"
            android:id="@+id/label_name"/>

        <EditText
            style="@style/DefaultEditText"
            android:id="@+id/text_item_name"
            android:hint="@string/hint_item_name"/>

    </LinearLayout>

    <Button
        style="@style/DefaultButton"
        android:layout_below="@id/layout_name"
        android:id="@+id/button_add_task"
        android:text="@string/button_add_task" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/layout_list"
        android:layout_below="@+id/button_add_task">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_of_tasks" />

    </LinearLayout>

    <Button
        style="@style/DefaultButton"
        android:layout_below="@+id/layout_list"
        android:layout_alignParentEnd="true"
        android:text="@string/button_save_item"
        android:id="@+id/button_save_item" />


</RelativeLayout>
